# CS100-finalproject

./: CMakeLists.txt  Planner.cpp  README.md  SortCategory.cpp  SortClass.hpp  SortDate.cpp  SortName.cpp  SortPriority.cpp  main.cpp  personalTask_test.cpp  personal_task.cpp  personal_task.hpp  readTasks.cpp  schoolTask_test.cpp  school_task.cpp  school_task.hpp  sortCategory_test.cpp  sortDate_test.cpp  sortName_test.cpp  sortPriority_test.cpp  task.cpp  task.hpp  task_test.cpp  unit_test.cpp
.github/workflows/: main.yml
